build: 빌드 환경설정 변경
  - kapt 관련 `kapt.include.compile.classpath=false` (기본값)
  - 빌드 jvmargs 수정
  - hibernate 모듈에 `kapt(Libs.jakarta_persistence_api)` 추가

Signed-off-by: Sunghyouk Bae <sunghyouk.bae@gmail.com>