@@ -133,15 +133,6 @@ subprojects {
             )
             freeCompilerArgs.addAll(experimentalAnnotations.map { "-opt-in=$it" })
         }
-
-        @Suppress("OPT_IN_USAGE")
-        kotlinDaemonJvmArgs = listOf(
-            "-Xmx2G",
-            "-XX:MaxMetaspaceSize=512m",
-            "-XX:+UseZGC",
-            "-XX:+UseStringDeduplication",
-            "-XX:+EnableDynamicAgentLoading"
-        )
     }
 
     atomicfu {
